--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ description: > # description of the site (multiple lines allowed)
 
 permalink: /:slug.html
 
-favicon: "logo.png" # name+extension of favicon (which must be put on the root folder)
+favicon: "icon.png" # name+extension of favicon (which must be put on the root folder)
 
 theme_config:
   appearance: "auto" # can be "light", "dark" or "auto"
